--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,17 @@ body {
     overflow: hidden;
   }
   
-  .slide img, .slide video {
+  /* .slide img, .slide video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  } */
+
+  .slide img, .slide video {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
   }
   
   @keyframes slide {
