--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,3 +212,15 @@ figcaption {
 }
 
 
+/* Bibliography */
+#bibliography {
+  max-width: 900px;
+  margin: 2rem auto;
+  font-size: 1rem;
+  line-height: 1.6;
+}
+
+#bibliography h2 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
